--- a/client/src/components/Tasks/CampaignList/CampaignItem.scss
+++ b/client/src/components/Tasks/CampaignList/CampaignItem.scss
@@ -1,8 +1,22 @@
 .campaign-list-item {
   list-style: none;
 
-  .profile-picture {
-    height: 80px;
-    width: 80px;
+  .picture {
+    height: 50px;
+    width: 50px;
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 10px;
+  }
+
+  .user {
+    display: inline-block;
+    .user-name {
+      display: flex;
+      span {
+        margin-right: 5px;
+        font-weight: 600;
+      }
+    }
   }
 }
