--- a/client/src/components/Tasks/CampaignList/CampaignList.scss
+++ b/client/src/components/Tasks/CampaignList/CampaignList.scss
@@ -1,5 +1,7 @@
 #campaign-list {
   background: #f1f1f1;
   flex-grow: 0;
-  flex-basis: 300px;
+  flex-basis: 330px;
+  min-width: 330px;
+  padding: 20px 20px;
 }
