--- a/client/src/components/Tasks/CampaignList/CampaignList.scss
+++ b/client/src/components/Tasks/CampaignList/CampaignList.scss
@@ -1,7 +1,7 @@
 #campaign-list {
-  background: #f1f1f1;
+  background: rgb(22, 27, 37);
   flex-grow: 0;
-  flex-basis: 330px;
-  min-width: 330px;
+  flex-basis: 310px;
+  min-width: 310px;
   padding: 20px 20px;
 }
