--- a/client/src/components/Tasks/CheckList/CheckList.scss
+++ b/client/src/components/Tasks/CheckList/CheckList.scss
@@ -1,4 +1,18 @@
+@import "../../../styles/mixins.scss";
 #checklist-list {
-  background: white;
+  background: rgb(246, 248, 249);
   flex-grow: 5;
+  padding: 15px;
+
+  h3 {
+    margin-bottom: 15px;
+  }
+
+  .check-list-container {
+    background: white;
+    padding: 15px;
+    height: 100%;
+    @include box-shadow(0, 1px, 4px, rgba(21, 27, 38, 0.08));
+    @include border-radius(3px);
+  }
 }
