--- a/client/src/components/Tasks/CheckList/CheckListItem.scss
+++ b/client/src/components/Tasks/CheckList/CheckListItem.scss
@@ -1,8 +1,50 @@
 .checkList-list-item {
-  font-weight: 600;
+  padding: 20px 5px;
+  border-bottom: 1px solid #f1f1f1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .checkList-description {
+    font-size: 1em;
+    margin-bottom: 5px;
+  }
+
+  .checkList-due-date {
+    color: #4e4e4e;
+    font-weight: 600;
+    font-size: 0.8em;
+    span {
+      font-weight: 300;
+    }
+  }
+
+  button {
+    height: 30px;
+    cursor: pointer;
+  }
+
+  svg {
+    font-size: 1.2em;
+    color: #95c13f;
+  }
+  // .checklist-complete-button {
+  //   display: inline-block;
+  //   border: none;
+  //   padding: 0.8rem 1rem;
+  //   border
+  //   margin: 0;
+  //   text-decoration: none;
+  //   background: #0069ed;
+  //   color: #ffffff;
+  //   line-height: 1;
+  //   cursor: pointer;
+  //   text-align: center;
+  //   transition: background 250ms ease-in-out;
+  // }
 }
 
 .checkList-list-item--completed {
   font-weight: 300;
-  color: pink;
+  color: #4e4e4e;
 }
