--- a/client/src/components/Tasks/MessageList/MessageList.scss
+++ b/client/src/components/Tasks/MessageList/MessageList.scss
@@ -1,4 +1,51 @@
-#message-list {
-  background: #909090;
-  flex-grow: 2;
+@import "../../../styles/mixins.scss";
+
+#message_list_container {
+  background: rgb(246, 248, 249);
+  padding: 15px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  flex-basis: 0;
+  height: calc(100% + 19px);
+
+  #message-list {
+    // IMPORTANT: The following 4 lines keeps the height flex and scrolls
+    flex-basis: auto;
+    overflow-y: scroll;
+    min-height: 1px;
+    flex: 1;
+
+    background: white;
+    padding: 15px;
+    @include box-shadow(0, 1px, 4px, rgba(21, 27, 38, 0.08));
+    @include border-radius(3px);
+  }
+
+  h3 {
+    margin-bottom: 15px;
+  }
+
+  .message_list_input {
+    @include box-shadow(0, 1px, 4px, rgba(21, 27, 38, 0.08));
+    @include border-radius(3px);
+
+    // position: fixed;
+    padding: 15px;
+    margin-top: auto;
+    // width: inherit;
+    // bottom: 0px;
+    background: #f1f1f1;
+
+    textarea {
+      @include border-radius(3px);
+      width: 100%;
+      // text-align: top;
+      border: 1px solid black;
+      // font-size: 3em;
+      // line-height: 100%;
+      padding: 10px;
+    }
+  }
 }
