--- a/client/src/components/Tasks/MessageList/MessageItem.scss
+++ b/client/src/components/Tasks/MessageList/MessageItem.scss
@@ -2,6 +2,7 @@
 
 .message-list-item {
   padding: 15px;
+  margin-bottom: 15px;
   background: #f1f1f1;
   @include border-radius(2px);
 
@@ -10,6 +11,7 @@
     flex-direction: row;
     justify-content: space-between;
     font-weight: 600;
+
     .message_list_item_date {
       font-size: 0.8em;
       font-weight: 300;
