--- a/client/src/components/Tasks/CheckList/CheckList.scss
+++ b/client/src/components/Tasks/CheckList/CheckList.scss
@@ -4,13 +4,13 @@
   flex-grow: 1;
   flex-basis: 0;
   padding: 15px;
-  overflow: hidden;
 
   h3 {
     margin-bottom: 15px;
   }
 
   .check-list-container {
+    overflow-y: scroll;
     background: white;
     padding: 15px;
     height: 100%;
