--- a/client/src/components/Tasks/CampaignList/CampaignItem.scss
+++ b/client/src/components/Tasks/CampaignList/CampaignItem.scss
@@ -13,7 +13,7 @@
 
   &:hover {
     color: white;
-    background: rgb(59, 64, 72);
+    background: #25292f;
     border-left: 3px solid white;
   }
 
