--- a/client/src/components/Tasks/CheckList/CheckList.scss
+++ b/client/src/components/Tasks/CheckList/CheckList.scss
@@ -3,10 +3,12 @@
   background: rgb(246, 248, 249);
   flex-grow: 1;
   flex-basis: 0;
-  padding: 15px;
+  padding: 15px 7px 15px 15px;
 
   h3 {
-    margin-bottom: 15px;
+    font-size: 1.1em;
+    color: #555;
+    margin-bottom: 5px;
   }
 
   .check-list-container {
