--- a/client/src/components/Tasks/Tasks.scss
+++ b/client/src/components/Tasks/Tasks.scss
@@ -1,4 +1,24 @@
 #campaign-tasks {
   height: 100%;
   display: flex;
+  .header_container {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    // flex-basis: auto;
+    // min-height: 1px;
+    // flex: 1;
+    overflow: hidden;
+
+    .checklist_message_container {
+      flex-basis: auto;
+      min-height: 1px;
+      flex: 1;
+      min-height: 1px;
+      display: flex;
+      flex-direction: row;
+    }
+  }
 }
