--- a/client/src/components/Header.scss
+++ b/client/src/components/Header.scss
@@ -23,10 +23,16 @@ header {
     p {
       font-size: 1.2em;
       font-weight: 600;
+      span {
+        font-weight: 300;
+      }
     }
   }
 
   button {
+    border: 0;
+    border-radius: 3px;
+    padding: 10px;
     margin-right: 10px;
   }
 }
