--- a/client/src/components/Tasks/ApplicationList/List.scss
+++ b/client/src/components/Tasks/ApplicationList/List.scss
@@ -1,8 +1,8 @@
 #campaign-list {
-  background: rgb(22, 27, 37);
+  background: #36253a;
   flex-grow: 0;
-  flex-basis: 240px;
-  min-width: 240px;
+  flex-basis: 290px;
+  min-width: 290px;
   padding: 15px 10px;
   overflow-y: scroll;
 }
