--- a/client/src/components/Tasks/Header/Header.scss
+++ b/client/src/components/Tasks/Header/Header.scss
@@ -1,14 +1,15 @@
-@import "../styles/mixins.scss";
+@import "../../../styles/mixins.scss";
 
 header {
   display: block;
   height: 80px;
   background: white;
-  @include box-shadow(0, 1px, 4px, rgba(21, 27, 38, 0.08));
-  padding: 15px;
+  // @include box-shadow(0, 1px, 4px, rgba(21, 27, 38, 0.08));
+  padding: 33px 15px 15px 15px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  @include box-shadow(0, 1px, 4px, rgba(21, 27, 38, 0.08));
 
   .header_user_info {
     display: flex;
@@ -29,10 +30,12 @@ header {
     }
   }
 
-  button {
-    border: 0;
-    border-radius: 3px;
-    padding: 10px;
-    margin-right: 10px;
+  .header_buttons {
+    .button {
+      border: 0;
+      border-radius: 3px;
+      padding: 10px;
+      margin-right: 10px;
+    }
   }
 }
