--- a/client/src/components/Tasks/Header/Header.scss
+++ b/client/src/components/Tasks/Header/Header.scss
@@ -2,13 +2,13 @@
 
 header {
   display: block;
-  height: 80px;
+  // height: 80px;
   background: white;
   // @include box-shadow(0, 1px, 4px, rgba(21, 27, 38, 0.08));
   padding: 33px 15px 15px 15px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  // justify-content: space-between;
   @include box-shadow(0, 1px, 4px, rgba(21, 27, 38, 0.08));
 
   .header_user_info {
@@ -17,25 +17,45 @@ header {
     div {
       width: 30px;
       height: 30px;
-      border-radius: 500px;
+      @include border-radius(18%);
       margin-right: 15px;
       // border: 1px solid black;
     }
     p {
-      font-size: 1.2em;
-      font-weight: 600;
+      font-size: 1em;
+      font-weight: 700;
       span {
         font-weight: 300;
       }
     }
   }
 
-  .header_buttons {
-    .button {
-      border: 0;
-      border-radius: 3px;
-      padding: 10px;
-      margin-right: 10px;
+  .button {
+    &--approve {
+      margin-left: 6px;
+      border: none;
+      padding: 13px 16px;
+      text-decoration: none;
+      font-weight: 700;
+      font-size: 13px;
+      cursor: pointer;
+      @include border-radius(3px);
+      background: #b0e263;
+
+      span {
+        font-weight: 300;
+      }
+    }
+    &--mediakit {
+      margin-left: auto;
+      border: none;
+      padding: 13px 16px;
+      background-color: #f1f1f1;
+      text-decoration: none;
+      font-weight: 700;
+      font-size: 13px;
+      cursor: pointer;
+      @include border-radius(3px);
     }
   }
 }
